<resources>
    <string name="app_name">OpenWeatherAPITest</string>

    <string name="new_pin_title">New Pin</string>
    <string name="name_pin_message">Name this pin</string>

    <string name="remove_pin_title">Delete Pin</string>
    <string name="remove_pin_message">Do you want to remove this pin?</string>

    <string name="rename_pin_title">Rename Pin</string>
    <string name="network_error">There was a problem receiving the details for the location</string>

    <string name="noname_pin_detail_title">In this area</string>
    <string name="pin_detail_current">Current weather</string>
    <string name="default_details">Obtaining weather info…</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="bookmark">Bookmark</string>

    <string name="delete_confirm">Confirm Delete</string>
    <string name="delete_message">Are you sure you want to delete this bookmark?</string>
    <string name="delete_all">Delete all bookmarks</string>

    <string name="city_noname_label">New Location</string>

    <string name="city_def_label">No Areas Bookmarked</string>
    <string name="city_def_temp">Bookmark an area by tapping on a desired location and giving it a nickname</string>

    <string name="city_rename_label">Rename Location</string>
    <string name="city_rename_hint">Name of this location</string>

    <string name="detail_forecast">5 Day Forecast</string>
    <string name="forecast_temp">Temperature</string>
    <string name="forecast_humid">Humidity</string>
    <string name="forecast_rain">Rain level</string>
    <string name="forecast_windinfo">Wind</string>
    <string name="loading">Loading Data…</string>

    <!--<string name="forecast_winddir">Wind Direction:</string>-->
    <!--<string name="forecast_windspeed">Wind Speed:</string>-->

    <!-- imported strings -->
    <string name="city">Location</string>
    <string name="save">Save</string>
    <string name="delete">DELETE</string>
    <string name="deleted"> has been deleted</string>
    <string name="all_deleted">All bookmarked locations have been deleted</string>
    <string name="undo">Undo</string>
    <string name="favorite">SET PREFERRED</string>
    <string name="current_forecast_label">Current Forecast</string>
    <string name="temperature_label">Temperature: </string>
    <string name="humidity_label">Humidity: </string>
    <string name="rain_level_label">3 Hour Rain Level: </string>
    <string name="cloudiness_label">Cloud Coverage: </string>
    <string name="wind_speed_label">Wind Speed: </string>
    <string name="wind_direction_label">Wind Direction: </string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="setting_label">Settings</string>
    <string name="help_label">Help</string>
    <string name="units_label">Unit System</string>
    <string name="imperial_measurement">Imperial</string>
    <string name="metric_measurement">Metric</string>

</resources>
