<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/border_highlight"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ProgressBar
        android:id="@+id/forecastLoading"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/forecastContainer"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="32dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:maxWidth="150dp"
            android:text="@string/forecast_windinfo"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/item_name"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.534"
            app:layout_constraintStart_toEndOf="@+id/forecastIcon"
            app:layout_constraintTop_toBottomOf="@+id/lblForecastRain" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="32dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:maxWidth="150dp"
            android:text="@string/forecast_rain"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/item_name"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.548"
            app:layout_constraintStart_toEndOf="@+id/forecastIcon"
            app:layout_constraintTop_toBottomOf="@+id/forecastIcon" />

        <TextView
            android:id="@+id/lblForecastRain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="32dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:text="0"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.526"
            app:layout_constraintStart_toEndOf="@+id/forecastIcon"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            android:maxWidth="150dp"
            android:text="@string/forecast_humid"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/item_name"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/forecastIcon"
            app:layout_constraintHorizontal_bias="0.552"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblForecastTemp" />

        <TextView
            android:id="@+id/lblForecastHumidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="4dp"
            android:text="60"
            android:textAlignment="center"
            app:layout_constraintEnd_toStartOf="@+id/forecastIcon"
            app:layout_constraintHorizontal_bias="0.548"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView3" />

        <ImageView
            android:id="@+id/forecastIcon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lblDateStr"
            app:srcCompat="@drawable/common_google_signin_btn_icon_dark" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:maxWidth="150dp"
            android:text="@string/forecast_temp"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/item_name"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/forecastIcon"
            app:layout_constraintHorizontal_bias="0.606"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forecastIcon" />

        <TextView
            android:id="@+id/lblForecastTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="4dp"
            android:text="83.0"
            android:textAlignment="center"
            app:layout_constraintEnd_toStartOf="@+id/forecastIcon"
            app:layout_constraintHorizontal_bias="0.553"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.666"
            app:layout_constraintStart_toEndOf="@+id/forecastIcon"
            app:layout_constraintTop_toBottomOf="@+id/textView7">

            <TextView
                android:id="@+id/lblLabelWindDir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:maxWidth="150dp"
                android:text="@string/wind_direction_label"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/description"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lblLabelWindSpeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/lblLabelWindDir"
                android:maxWidth="150dp"
                android:text="@string/wind_speed_label"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/description"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lblForecastWindDir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/lblLabelWindDir"
                android:layout_marginLeft="8dp"
                android:layout_toRightOf="@id/lblLabelWindDir"
                android:text="77.25"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/lblForecastWindSpeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/lblForecastWindDir"
                android:layout_alignTop="@id/lblLabelWindSpeed"
                android:layout_toRightOf="@id/lblLabelWindSpeed"
                android:text="12.2"
                android:textAlignment="center" />
        </RelativeLayout>

        <TextView
            android:id="@+id/lblDateStr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="01/01/1970 - Monday"
            android:textAllCaps="true"
            android:textColor="@color/item_name"
            android:textSize="18sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>
</FrameLayout>